Landing fix for bug 76190 ("visual selection" issue) for Chimera.