mozilla/content/base/src/nsSelection.cpp
@@ -421,6 +421,7 @@ private:
                          PRUint32 aContentOffset,
                          PRUint32 aKeycode);
   void BidiLevelFromClick(nsIContent *aNewFocus, PRUint32 aContentOffset);
+#ifdef VISUALSELECTION
   NS_IMETHOD VisualSelectFrames(nsIPresContext* aContext,
                                 nsIFrame* aCurrentFrame,
                                 nsPeekOffsetStruct aPos);
@@ -443,6 +444,7 @@ private:
                          nsIFrame* aCurrentFrame,
                          PRInt32 aCurrentOffset,
                          nsPeekOffsetStruct aPos);
+#endif // VISUALSELECTION
 #endif // IBMBIDI
 
 //post and pop reasons for notifications. we may stack these later
@@ -1728,6 +1730,9 @@ nsSelection::MoveCaret(PRUint32 aKeycode, PRBool aContinue, nsSelectionAmount aA
               BidiLevelFromMove(context, shell, pos.mResultContent, pos.mContentOffset, aKeycode);
         }
       }
+#ifndef VISUALSELECTION
+    }
+#else
       // Handle visual selection
       if (aContinue)
       {
@@ -1739,6 +1744,7 @@ nsSelection::MoveCaret(PRUint32 aKeycode, PRBool aContinue, nsSelectionAmount aA
         result = TakeFocus(pos.mResultContent, pos.mContentOffset, pos.mContentOffset, aContinue, PR_FALSE);
     }
     else
+#endif // VISUALSELECTION
 #endif // IBMBIDI
     result = TakeFocus(pos.mResultContent, pos.mContentOffset, pos.mContentOffset, aContinue, PR_FALSE);
   }
@@ -1898,6 +1904,7 @@ nsresult FindLineContaining(nsIFrame* aFrame, nsIFrame** aBlock, PRInt32* aLine)
   return it->FindLineContaining(thisBlock, aLine);  
 }
 
+#ifdef VISUALSELECTION
 NS_IMETHODIMP
 nsSelection::VisualSequence(nsIPresContext *aPresContext,
                             nsIFrame* aSelectFrame,
@@ -2278,6 +2285,7 @@ nsSelection::VisualSelectFrames(nsIPresContext *aPresContext,
   NotifySelectionListeners(nsISelectionController::SELECTION_NORMAL);
   return NS_OK;
 }
+#endif // VISUALSELECTION
 
 NS_IMETHODIMP
 nsSelection::GetPrevNextBidiLevels(nsIPresContext *aPresContext,
@@ -2676,6 +2684,7 @@ nsSelection::HandleDrag(nsIPresContext *aPresContext, nsIFrame *aFrame, nsPoint&
   if (NS_SUCCEEDED(result))
   {
 #ifdef IBMBIDI
+#ifdef VISUALSELECTION
     PRBool bidiEnabled = PR_FALSE;
     aPresContext->GetBidiEnabled(&bidiEnabled);
     if (bidiEnabled) {
@@ -2700,6 +2709,7 @@ nsSelection::HandleDrag(nsIPresContext *aPresContext, nsIFrame *aFrame, nsPoint&
       mHint = saveHint;
     }
     else
+#endif
 #endif // IBMBIDI
       result = HandleClick(newContent, startPos, contentOffsetEnd, PR_TRUE,
                            PR_FALSE, beginOfContent);
